--- a/2030.html
+++ b/2030.html
@@ -167,86 +167,7 @@
         </div>
       </section>
 
-      <section id="church-planting" class="bg-pine text-white px-0 pt-0">
-        <div class="text-constrained mx-auto px-4 px-sm-7 px-md-0">
-          <div class="text-center">
-            <h2 class="display-2 text-sage">Plant Ten Churches</h2>
-            <p class="lead text-white o-50">
-              We will identify, train, and send out people we believe have been called by God and are ready to start a new church — not a NewSpring campus.
-            </p>
-            <p>
-              We believe these new churches will be planted outside the state of South Carolina through
-              <a href="https://newspringnetwork.com">NewSpring Network</a>. We also strongly believe God will raise up other people in our church who will feel
-              called to go and be a part of these church plants!
-            </p>
-          </div>
-        </div>
-
-        <div class="mt-6">
-          <!-- Slider main container -->
-          <div id="church-planting-swiper" class="swiper-container text-left">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper mb-6">
-              <!-- Slides -->
-              <div class="swiper-slide">
-                <section class="position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden" data-aos="fade-up">
-                  <div
-                    class="fullscreen background-cover background-bottom"
-                    style="
-                      background-image: url('https://images.unsplash.com/photo-1627818653012-054f17eb0648?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2672&q=80');
-                    "></div>
-
-                  <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
-
-                  <div class="bring-forward text-constrained mx-auto">
-                    <h3 class="h5">May 2023 Church Planting Update</h3>
-                    <p class="mb-0"><a href="#" class="btn btn-xs btn-primary drop-shadow">Read Update</a></p>
-                  </div>
-                </section>
-              </div>
-
-              <div class="swiper-slide">
-                <section class="position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden" data-aos="fade-up">
-                  <div
-                    class="fullscreen background-cover background-bottom"
-                    style="
-                      background-image: url('https://images.unsplash.com/photo-1550633794-58a2127a9027?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2670&q=80');
-                    "></div>
-
-                  <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
-
-                  <div class="bring-forward text-constrained mx-auto">
-                    <h3 class="h5">Peoria Church Plant</h3>
-                    <p class="mb-0"><a href="#" class="btn btn-xs btn-primary drop-shadow">Read Update</a></p>
-                  </div>
-                </section>
-              </div>
-
-              <div class="swiper-slide">
-                <section class="position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden" data-aos="fade-up">
-                  <div
-                    class="fullscreen background-cover background-bottom"
-                    style="
-                      background-image: url('https://images.unsplash.com/photo-1444664361762-afba083a4d77?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2000&q=80');
-                    "></div>
-
-                  <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
-
-                  <div class="bring-forward text-constrained mx-auto">
-                    <h3 class="h5">Sept 2023 Church Planting Update</h3>
-                    <p class="mb-0"><a href="#" class="btn btn-xs btn-primary drop-shadow">Read Update</a></p>
-                  </div>
-                </section>
-              </div>
-            </div>
-
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-          </div>
-        </div>
-      </section>
-
-      <section id="campus-facilities" class="bg-white text-pine position-relative px-0">
+      <section id="campus-facilities" class="bg-pine text-white position-relative px-0 pt-0">
         <div
           class="hidden fullscreen background-cover background-top o-80"
           style="
@@ -256,9 +177,9 @@
           class="hidden fullscreen o-100"
           style="background: rgb(35, 93, 95); background: linear-gradient(0deg, rgba(35, 93, 95, 0) 50%, rgba(35, 93, 95, 1) 100%)"></div>
         <div class="text-constrained mx-auto text-center px-4 px-sm-7 px-md-0">
-          <h2 class="display-3">All NewSpring Campuses in Permanent Homes</h2>
+          <h2 class="display-3 text-sage">All NewSpring Campuses in Permanent Homes</h2>
 
-          <p class="lead">Out of our 14 locations across the state, some campuses are still leasing their facilities.</p>
+          <p class="lead text-white o-50">Out of our 14 locations across the state, some campuses are still leasing their facilities.</p>
           <p>
             We want to see the <a href="/locations/aiken">Aiken</a>, <a href="/locations/charleston">Charleston</a>,
             <a href="/locations/lake-wylie">Lake Wylie</a>, and <a href="/locations/myrtle-beach">Myrtle Beach</a> campuses established in their permanent
@@ -318,6 +239,85 @@
 
                   <div class="bring-forward text-constrained mx-auto">
                     <h3 class="h5">Flyover of Myrtle Beach Property</h3>
+                    <p class="mb-0"><a href="#" class="btn btn-xs btn-primary drop-shadow">Read Update</a></p>
+                  </div>
+                </section>
+              </div>
+            </div>
+
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+
+      <section id="church-planting" class="bg-white text-pine px-0">
+        <div class="text-constrained mx-auto px-4 px-sm-7 px-md-0">
+          <div class="text-center">
+            <h2 class="display-2">Plant Ten Churches</h2>
+            <p class="lead">
+              We will identify, train, and send out people we believe have been called by God and are ready to start a new church — not a NewSpring campus.
+            </p>
+            <p>
+              We believe these new churches will be planted outside the state of South Carolina through
+              <a href="https://newspringnetwork.com" target="_blank">NewSpring Network</a>. We also strongly believe God will raise up other people in our
+              church who will feel called to go and be a part of these church plants!
+            </p>
+          </div>
+        </div>
+
+        <div class="mt-6">
+          <!-- Slider main container -->
+          <div id="church-planting-swiper" class="swiper-container text-left">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper mb-6">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <section class="position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden" data-aos="fade-up">
+                  <div
+                    class="fullscreen background-cover background-bottom"
+                    style="
+                      background-image: url('https://images.unsplash.com/photo-1627818653012-054f17eb0648?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2672&q=80');
+                    "></div>
+
+                  <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
+
+                  <div class="bring-forward text-constrained mx-auto">
+                    <h3 class="h5">May 2023 Church Planting Update</h3>
+                    <p class="mb-0"><a href="#" class="btn btn-xs btn-primary drop-shadow">Read Update</a></p>
+                  </div>
+                </section>
+              </div>
+
+              <div class="swiper-slide">
+                <section class="position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden" data-aos="fade-up">
+                  <div
+                    class="fullscreen background-cover background-bottom"
+                    style="
+                      background-image: url('https://images.unsplash.com/photo-1550633794-58a2127a9027?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2670&q=80');
+                    "></div>
+
+                  <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
+
+                  <div class="bring-forward text-constrained mx-auto">
+                    <h3 class="h5">Peoria Church Plant</h3>
+                    <p class="mb-0"><a href="#" class="btn btn-xs btn-primary drop-shadow">Read Update</a></p>
+                  </div>
+                </section>
+              </div>
+
+              <div class="swiper-slide">
+                <section class="position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden" data-aos="fade-up">
+                  <div
+                    class="fullscreen background-cover background-bottom"
+                    style="
+                      background-image: url('https://images.unsplash.com/photo-1444664361762-afba083a4d77?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2000&q=80');
+                    "></div>
+
+                  <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
+
+                  <div class="bring-forward text-constrained mx-auto">
+                    <h3 class="h5">Sept 2023 Church Planting Update</h3>
                     <p class="mb-0"><a href="#" class="btn btn-xs btn-primary drop-shadow">Read Update</a></p>
                   </div>
                 </section>
