added see more updates links to vision 2030 page

--- a/2030.html
+++ b/2030.html
@@ -194,60 +194,67 @@
             <div class="swiper-wrapper mb-6">
               <!-- Slides -->
               <div class="swiper-slide">
-                <section class="position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden" data-aos="fade-up">
+                <a
+                  href="#"
+                  class="d-block text-decoration-none position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden"
+                  data-aos="fade-up">
                   <div
                     class="fullscreen background-cover background-bottom"
                     style="
                       background-image: url('https://images.unsplash.com/photo-1517089152318-42ec560349c0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2874&q=80');
                     "></div>
 
-                  <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
+                  <div class="fullscreen o-100" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0.9) 100%)"></div>
 
                   <div class="bring-forward text-constrained mx-auto">
-                    <h3 class="h5">Aiken Campus Ground Breaking</h3>
-                    <p class="mb-0"><a href="#" class="btn btn-xs btn-primary drop-shadow">Read Update</a></p>
+                    <h3 class="h5 mb-0">Campus Development Update</h3>
                   </div>
-                </section>
+                </a>
               </div>
 
               <div class="swiper-slide">
-                <section class="position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden" data-aos="fade-up">
+                <a
+                  href="#"
+                  class="d-block text-decoration-none position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden"
+                  data-aos="fade-up">
                   <div
                     class="fullscreen background-cover background-bottom"
                     style="
-                      background-image: url('https://images.unsplash.com/photo-1677859533961-51147497c50f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3087&q=80');
+                      background-image: url('https://images.unsplash.com/photo-1517089152318-42ec560349c0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2874&q=80');
                     "></div>
 
-                  <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
+                  <div class="fullscreen o-100" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0.9) 100%)"></div>
 
                   <div class="bring-forward text-constrained mx-auto">
-                    <h3 class="h5">Charleston Facility Update</h3>
-                    <p class="mb-0"><a href="#" class="btn btn-xs btn-primary drop-shadow">Read Update</a></p>
+                    <h3 class="h5 mb-0">Campus Development Update</h3>
                   </div>
-                </section>
+                </a>
               </div>
 
               <div class="swiper-slide">
-                <section class="position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden" data-aos="fade-up">
+                <a
+                  href="#"
+                  class="d-block text-decoration-none position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden"
+                  data-aos="fade-up">
                   <div
                     class="fullscreen background-cover background-bottom"
                     style="
-                      background-image: url('https://images.unsplash.com/photo-1669003152631-c953ac9f3ed3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2942&q=80');
+                      background-image: url('https://images.unsplash.com/photo-1517089152318-42ec560349c0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2874&q=80');
                     "></div>
 
-                  <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
+                  <div class="fullscreen o-100" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0.9) 100%)"></div>
 
                   <div class="bring-forward text-constrained mx-auto">
-                    <h3 class="h5">Flyover of Myrtle Beach Property</h3>
-                    <p class="mb-0"><a href="#" class="btn btn-xs btn-primary drop-shadow">Read Update</a></p>
+                    <h3 class="h5 mb-0">Campus Development Update</h3>
                   </div>
-                </section>
+                </a>
               </div>
             </div>
 
             <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
           </div>
+          <p><a href="#" class="btn btn-primary">See More Updates</a></p>
         </div>
       </section>
 
@@ -268,65 +275,72 @@
 
         <div class="mt-6">
           <!-- Slider main container -->
-          <div id="church-planting-swiper" class="swiper-container text-left">
+          <div id="church-planting-swiper" class="swiper-container text-left my-5 mt-md-6">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper mb-6">
               <!-- Slides -->
               <div class="swiper-slide">
-                <section class="position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden" data-aos="fade-up">
-                  <div
-                    class="fullscreen background-cover background-bottom"
-                    style="
-                      background-image: url('https://images.unsplash.com/photo-1627818653012-054f17eb0648?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2672&q=80');
-                    "></div>
-
-                  <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
-
-                  <div class="bring-forward text-constrained mx-auto">
-                    <h3 class="h5">May 2023 Church Planting Update</h3>
-                    <p class="mb-0"><a href="#" class="btn btn-xs btn-primary drop-shadow">Read Update</a></p>
-                  </div>
-                </section>
-              </div>
-
-              <div class="swiper-slide">
-                <section class="position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden" data-aos="fade-up">
-                  <div
-                    class="fullscreen background-cover background-bottom"
-                    style="
-                      background-image: url('https://images.unsplash.com/photo-1550633794-58a2127a9027?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2670&q=80');
-                    "></div>
-
-                  <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
-
-                  <div class="bring-forward text-constrained mx-auto">
-                    <h3 class="h5">Peoria Church Plant</h3>
-                    <p class="mb-0"><a href="#" class="btn btn-xs btn-primary drop-shadow">Read Update</a></p>
-                  </div>
-                </section>
-              </div>
-
-              <div class="swiper-slide">
-                <section class="position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden" data-aos="fade-up">
+                <a
+                  href="#"
+                  class="d-block text-decoration-none position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden"
+                  data-aos="fade-up">
                   <div
                     class="fullscreen background-cover background-bottom"
                     style="
                       background-image: url('https://images.unsplash.com/photo-1444664361762-afba083a4d77?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2000&q=80');
                     "></div>
 
-                  <div class="fullscreen" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.9) 70%)"></div>
+                  <div class="fullscreen o-100" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0.9) 100%)"></div>
 
                   <div class="bring-forward text-constrained mx-auto">
-                    <h3 class="h5">Sept 2023 Church Planting Update</h3>
-                    <p class="mb-0"><a href="#" class="btn btn-xs btn-primary drop-shadow">Read Update</a></p>
+                    <h3 class="h5 mb-0">Church Planting Update</h3>
                   </div>
-                </section>
+                </a>
+              </div>
+
+              <div class="swiper-slide">
+                <a
+                  href="#"
+                  class="d-block text-decoration-none position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden"
+                  data-aos="fade-up">
+                  <div
+                    class="fullscreen background-cover background-bottom"
+                    style="
+                      background-image: url('https://images.unsplash.com/photo-1444664361762-afba083a4d77?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2000&q=80');
+                    "></div>
+
+                  <div class="fullscreen o-100" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0.9) 100%)"></div>
+
+                  <div class="bring-forward text-constrained mx-auto">
+                    <h3 class="h5 mb-0">Church Planting Update</h3>
+                  </div>
+                </a>
+              </div>
+
+              <div class="swiper-slide">
+                <a
+                  href="#"
+                  class="d-block text-decoration-none position-relative bg-black text-white px-4 pt-10 pb-5 px-md-5 pb-md-5 rounded-lg overflow-hidden"
+                  data-aos="fade-up">
+                  <div
+                    class="fullscreen background-cover background-bottom"
+                    style="
+                      background-image: url('https://images.unsplash.com/photo-1444664361762-afba083a4d77?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2000&q=80');
+                    "></div>
+
+                  <div class="fullscreen o-100" style="background: linear-gradient(180deg, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0.9) 100%)"></div>
+
+                  <div class="bring-forward text-constrained mx-auto">
+                    <h3 class="h5 mb-0">Church Planting Update</h3>
+                  </div>
+                </a>
               </div>
             </div>
 
             <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
           </div>
+          <p class="text-center"><a href="#" class="btn btn-primary">See More Updates</a></p>
         </div>
       </section>
 
