updated funding section heading to be title case like the other sections

--- a/2030.html
+++ b/2030.html
@@ -380,7 +380,7 @@
 
       <section id="questions" class="text-center">
         <div class="text-constrained mx-auto">
-          <h2 class="display-3 text-pine">How do we fund this vision?</h2>
+          <h2 class="display-3 text-pine">How Do We Fund this Vision?</h2>
           <p class="lead">Vision 2030 becomes more of a reality when we trust God at His Word and give our tithes and offerings.</p>
           <p>
             Every year, the <a href="/overflow">Overflow Offering</a> gives us an opportunity to take a huge stride toward our goals. Learn more about why we
